VE-1830: Created the Experiment Summary service, repo, and view.
