# src/swagger/swagger.json
@@ -787,6 +787,55 @@
                 }
             }
         },
+        "/experiments/{id}/summary": {
+            "get": {
+                "summary": "get the experiment summary for given experiment id.",
+                "description": "This endpoint returns summary information about the experiment, such as name, number of variables, etc.\n",
+                "tags": [
+                    "Experiment Summary"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "type": "integer",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Experiment Summary",
+                        "schema": {
+                            "$ref": "#/definitions/ExperimentSummary"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "404": {
+                        "description": "No Experiment Found For ID",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
         "/dependent-variables/{id}": {
             "get": {
                 "summary": "get one dependent variable entity",
@@ -3236,6 +3285,31 @@
                 "rep": {
                     "type": "integer",
                     "description": "rep number of experimental unit."
+                }
+            }
+        },
+        "ExperimentSummary": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "description": "id of the experiment."
+                },
+                "name": {
+                    "type": "string",
+                    "description": "name of the experiment."
+                },
+                "numberOfVariables": {
+                    "type": "integer",
+                    "description": "the number of variables associated with the experiment."
+                },
+                "numberOfTreatments": {
+                    "type": "integer",
+                    "description": "the number of treatments associated with the experiment."
+                },
+                "numberOfExperimentalUnits": {
+                    "type": "integer",
+                    "description": "the number of experimental units associated with the experiment."
                 }
             }
         },
